css/style.css
td {
	padding-top: 2px !important;
	padding-bottom: 2px !important;
}
td.mergedTop {
	border-bottom: 1px dashed rgba(34, 36, 38, 0.3);
	padding-top: 5px !important;
	padding-bottom: 5px !important;
}
td.mergedBottom {
	border-top: none !important;
	border-left: 1px solid rgba(34, 36, 38, 0.1) !important;
	padding-top: 5px !important;
	padding-bottom: 5px !important;
}
td.time {
	padding: 5px 15px !important;
	width: 1px;
}
p.time {
	margin: 0;
	text-align: center;
}
.container {
	margin: 20px auto !important;
}
.controls {
	margin: 10px;
}
.segment p.week, thead th {
	color: rgba(0, 0, 0, 0.6) !important;
	font-family: 'Lato', 'Helvetica Neue', Arial, Helvetica, sans-serif;
	text-transform: none;
	text-shadow: none;
	font-weight: bold;
	line-height: 1em;
	font-style: normal;
	text-align: center;
	text-decoration: none;
}
thead {
	text-align: center;
}
.segment.no-shadow {
	box-shadow: none !important;
}
.ui.dimmer {
	position: fixed !important;
}
.column {
	padding-bottom: 0 !important;
}
button.bugreport {
	position: fixed !important;
	right: 10px !important;
	bottom: 10px !important;
	z-index: 9999;
}
.popup.bugreport {
	position: fixed !important;
	z-index: 9999;
}
.popup.bugreport .content.success .header {
	color: #2C662D !important;
}
.popup.bugreport .content.fail .header {
	color: #9F3A38 !important;
}
.table.bugreport {
	position: relative;
	z-index: 9999;
}
.ui.table:last-child {
	margin-bottom: 20px;
}

